Part 1 CRUD Operations completed
